# LUDI

./: .gitignore  README.md  pyproject.toml
src/ludi/: __init__.py  __main__.py  assets.py  logger.py  ludi.py
src/ludi/backends/angr/: decompiler.py  managers.py
src/ludi/backends/auto/: decompiler.py
src/ludi/backends/base/: config.py  decompiler.py  managers.py  query.py  types.py
src/ludi/backends/ghidra/: decompiler.py  managers.py
src/ludi/backends/ida/: decompiler.py  managers.py
src/ludi/backends/remote/: client.py  decompiler.py  managers.py  server.py
src/ludi/cli/: analyze.py  config.py  main.py
src/ludi/core/: __init__.py  analyze.py  config.py  ludi.py  utils.py
src/ludi/decompilers/angr/: config.py  decompiler.py  managers.py
src/ludi/decompilers/auto/: config.py  decompiler.py
src/ludi/decompilers/base/: config.py  decompiler.py  managers.py  query.py  types.py
src/ludi/decompilers/ghidra/: config.py  decompiler.py  managers.py
src/ludi/decompilers/ida/: config.py  decompiler.py  managers.py
src/ludi/decompilers/remote/: backend.py  client.py  managers.py  server.py
tests/: __init__.py  test_backend_initialization.py  test_basic.py
